# vampire-rs

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
vampire/: Cargo.toml
vampire-build/: Cargo.toml
vampire-build/src/: lib.rs
vampire-cli/: Cargo.toml
vampire-cli/host/src/main/: AndroidManifest.xml
vampire-cli/host/src/main/java/com/vampire/host/: VampireInstrumentation.java
vampire-cli/host/src/main/java/com/vampire/loader/: TestMetadata.java  TestRunner.java
vampire-cli/host/src/main/res/values/: strings.xml
vampire-cli/src/: android_sdk.rs  host_templates.rs  main.rs  maven.rs
vampire-example/: Cargo.toml  build.rs
vampire-example/src/: lib.rs
vampire-example/tests/: integration_test.rs
vampire-macro/: Cargo.toml
vampire-macro/src/: lib.rs
vampire/src/: lib.rs
