[workspace]
members = [
    "vampire-macro",
    "vampire",
    "vampire-cli",
    "vampire-build"
]
exclude = ["vampire-example"]

resolver = "2"

[workspace.dependencies]
jni = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
toml = "0.9"
clap = { version = "4.0", features = ["derive"] }
glob = "0.3"

[workspace.package]
version = "0.1.0"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/bbqsrc/vampire-rs"
repository = "https://github.com/bbqsrc/vampire-rs"
keywords = ["android", "testing", "jni", "instrumentation"]
categories = ["development-tools::testing"]

# Ensure symbols are exported for JNI
[profile.release]
strip = false

[profile.dev]
strip = false