[package]
name = "vampire-cli"
version.workspace = true
edition = "2024"
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "CLI tool for managing Vampire Android test projects"
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "vampire"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
glob = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
pathos = "0.3"
xmlem = "0.3.3"
zip = "5.1.1"
frakt = { git = "https://github.com/bbqsrc/frakt" }
blake3 = "1.5"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"