[package]
name = "vampire"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
edition = "2024"

[dependencies]
jni = { workspace = true }
libc = "0.2"
libloading = "0.8"
inventory = "0.3"
vampire-macro = { path = "../vampire-macro" }